# vchsm

./: .gitignore  C++.gitignore  CMakeLists.txt  README.MD
CppAlgo/: CppAlgo.sln  CppAlgo.vcxproj  CppAlgo.vcxproj.filters  DynamicTimeWarping.cpp  DynamicTimeWarping.h  EigenSerialization.h  FFT.h  HSManalyze.cpp  HSManalyze.h  HSManalyze_mfcc.cpp  HSManalyze_mfcc.h  HSMptraining.cpp  HSMptraining.h  HSMsynthesize.cpp  HSMsynthesize.h  HSMwfwconvert.cpp  HSMwfwconvert.h  PicosElement.h  PrepareParallelData.cpp  PrepareParallelData.h  RealTimeConverter.cpp  RealTimeConverter.h  StructDefinitions.h  WavHeader.h  WavRW.cpp  WavRW.h  aaalsf.cpp  aaalsf.h  almostEqual.h  angle.h  automaticth2wfw.cpp  automaticth2wfw.h  bylevdurb.cpp  bylevdurb.h  bymcaquat.cpp  bymcaquat.h  clustkmeans.cpp  clustkmeans.h  comp_delta.cpp  comp_delta.h  (+55 more)
CppAlgo/example/: main.cpp
CppAlgo/include/vchsm/: C_Swift_bridge_header.h  convert_C.h  train_C.h  train_C.mm
CppAlgo/src/: DynamicTimeWarping.cpp  DynamicTimeWarping.h  EigenSerialization.h  FFT.h  HSManalyze.cpp  HSManalyze.h  HSManalyze_mfcc.cpp  HSManalyze_mfcc.h  HSMptraining.cpp  HSMptraining.h  HSMsynthesize.cpp  HSMsynthesize.h  HSMwfwconvert.cpp  HSMwfwconvert.h  PicosElement.h  PrepareParallelData.cpp  PrepareParallelData.h  RealTimeConverter.cpp  RealTimeConverter.h  StructDefinitions.h  WavHeader.h  WavRW.cpp  WavRW.h  aaalsf.cpp  aaalsf.h  almostEqual.h  angle.h  automaticth2wfw.cpp  automaticth2wfw.h  bylevdurb.cpp  bylevdurb.h  bymcaquat.cpp  bymcaquat.h  clustkmeans.cpp  clustkmeans.h  comp_delta.cpp  comp_delta.h  concat.h  constants.h  conv.cpp  (+48 more)
